[build-system]
build-backend = "setuptools.build_meta"
requires = ["build", "pip", "setuptools", "wheel", "pybind11"]

[project]
name = "meow-sim"
version = "0.3.1"
authors = [
{ name = "Rockley Photonics" },
{ name = "Floris Laporte", email = "floris.laporte@rockleyphotonics.com" },
]
description = "Modeling of Eigenmodes and Overlaps in Waveguide Structures"
requires-python = ">=3.8"
keywords = [
  "eigenmodes",
  "eme",
  "fde",
  "modeling",
  "overlaps",
  "photonics",
  "waveguides",
]
license = { text = "Apache Software License" }
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "matplotlib",
  "numpy>=1.24",
  "pydantic",
  "sax>=0.8.4",
  "scipy",
  "shapely",
  "tidy3d>=2.1",
  "trimesh[easy]",
]

[project.optional-dependencies]
min = ["meow-sim"]
vis = ["matplotlib", "trimesh[easy]"]
jax = ["jax", "jaxlib"]
klu = ["klujax>0.1.2"]
ipy = ["ipykernel", "ipywidgets", "ipympl", "nbstripout", "tqdm"]
gds = ["gdsfactory>6.27.0", "klayout>0.28.2"]
dev = ["bump2version", "nbstripout", "pre-commit", "black", "sphinx", "autodoc-pydantic", "myst-nb>0.17.1"]
full = ["meow-sim[vis,klu,jax,ipy,gds]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["meow*"]
exclude = []
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pyright]
reportPrivateImportUsage = false
