[build-system]
build-backend = "setuptools.build_meta"
requires = ["build", "pip", "setuptools", "wheel", "pybind11"]

[project]
name = "meow-sim"
version = "0.13.0"
authors = [
{ name = "Floris Laporte", email = "floris.laporte@gmail.com" },
]
description = "Modeling of Eigenmodes and Overlaps in Waveguide Structures"
requires-python = ">=3.11"
keywords = [
  "eigenmodes",
  "eme",
  "fde",
  "modeling",
  "overlaps",
  "photonics",
  "waveguides",
]
license = { text = "Apache Software License" }
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "matplotlib",
  "numpy>=2.0",
  "orjson",
  "packaging",
  "pydantic>=2",
  "sax>=0.14.1",
  "scipy",
  "shapely",
  "tidy3d>=2.8.0,<2.9.0",
  "trimesh[easy]",
]

[project.optional-dependencies]
min = ["meow-sim"]
vis = ["matplotlib", "trimesh[easy]"]
jax = ["jax", "jaxlib"]
klu = ["klujax>0.1.2"]
ipy = ["ipykernel", "ipywidgets", "ipympl", "nbstripout", "tqdm"]
gds = ["gdsfactory~=9.3"]
dev = ["build", "bump2version", "nbstripout", "pre-commit", "black[jupyter]", "autoimport", "isort", "sphinx", "autodoc-pydantic", "myst-nb>0.17.1", "jupyter-book", "papermill"]
full = ["meow-sim[vis,klu,jax,ipy,gds]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["meow*"]
exclude = []
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pyright]
reportPrivateImportUsage = false
reportUnusedVariable = false
