[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "uv", "build", "wheel"]

[project]
authors = [{name = "Floris Laporte", email = "floris.laporte@gmail.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "sax",  # >= 0.15.0
  "matplotlib>=3.0.0",
  "numpy>=2.2.0",
  "orjson>=3.0.0",
  "pydantic>=2.10.0",
  "shapely",
  "tidy3d>=2.8.0,<2.9.0",
  "trimesh[easy]",
  "jax>=0.6.0",
  "klujax>=0.4.1",
  "tqdm"
]
description = "Modeling of Eigenmodes and Overlaps in Waveguides"
keywords = [
  "eigenmodes",
  "eme",
  "fde",
  "modeling",
  "overlaps",
  "photonics",
  "waveguides"
]
license = {text = "Apache Software License"}
name = "meow-sim"
readme = "README.md"
requires-python = ">=3.11"
version = "0.13.0"

[project.optional-dependencies]
dev = [
  "ipywidgets",
  "ipympl",
  "nbstripout",
  "build>=1.2.0",
  "gdsfactory>=9.7.0",
  "ipykernel>=6.29.5",
  "mkinit>=1.1.0",
  "pre-commit>=4.1.0",
  "pyright>=1.1.0",
  "ruff>=0.9.0",
  "tbump>=6.0.0",
  "tmm>=0.2.0",
  "towncrier>=24.0.0"
]
docs = [
  "griffe>=1.5.6",
  "mkautodoc>=0.2.0",
  "mkdocs-autorefs>=1.3.0",
  "mkdocs-material>=9.6.0",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.27.0",
  "papermill>=2.6.0",
  "nbconvert>=7.16.6"
]
full = [
  "gdsfactory>=9.0"
]
gf = [
  "gdsfactory>=9.0"
]

[tool.pytest.ini_options]
addopts = '--tb=short'
norecursedirs = ["scripts"]
testpaths = ["src/tests"]

[tool.ruff]
fix = true
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]  # see https://docs.astral.sh/ruff/rules
ignore = [
  "COM812",  # missing-trailing-comma
  "D105",  # undocumented-magic-method
  "E741",  # ambiguous-variable-name
  "ERA001",  # commented-out-code
  "FIX001",  # line-contains-fixme
  "FIX002",  # line-contains-todo
  "FIX004",  # line-contains-hack
  "N803",  # invalid-argument-name
  "N806",  # non-lowercase-variable-in-function
  "PD901",  # pandas-df-variable-name
  "PLC0414",  # useless-import-alias
  "PLR0913",  # too-many-arguments
  "PLR2004",  # magic-value-comparison
  "PLW2901",  # redefined-loop-name
  "RET504",  # unnecessary-assign
  "TC001",  # typing-only-first-party-import
  "TC002",  # typing-only-third-party-import
  "TC003",  # typing-only-standard-library-import
  "TC006",  # runtime-cast-value
  "TD001",  # invalid-todo-tag
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link
  "TID252",  # relative-imports
  "TRY003"  # raise-vanilla-args
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "ANN",  # flake8-annotations
  "ARG001",  # unused-function-argument
  "D",  # pydocstyle
  "E402",  # module-import-not-at-top-of-file
  "E501",  # line-too-long
  "F821",  # undefined-name
  "FBT003",  # boolean-positional-value-in-call
  "N816",  # mixed-case-variable-in-global-scope
  "PLC2401",  # non-ascii-name
  "S101",  # assert
  "SLF001"  # private-member-access
]
"src/tests/*" = [
  "D",  # pydocstyle
  "PT011",  # pytest-raises-too-broad
  "S101",  # assert
  "INP001"  # implicit-namespace-package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.tbump]

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "src/sax/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[tool.tbump.version]
current = "0.13.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''
